apps/monitoring/grafana/ingress.yaml
# apps/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/part-of: grafana
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.cluster.f4mily.net
      secretName: grafana-tls
  rules:
    - host: grafana.cluster.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
